fix footer and horizontal scroll

--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -4,19 +4,13 @@
   padding: 0;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 .App {
   background: var(--background);
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 24px;
+  min-height: 100vh;
 }
 
 .container {
@@ -34,7 +28,7 @@ section {
 .card-section {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: minmax(200px, 1fr);
   justify-content: space-between;
   flex-grow: 1;
 }
